kubernetes/presync/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: presync
  labels:
    name: presync
