kubernetes/presync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: presync
  name: presync
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
spec:
  rules:
    - host: abc.code-run.ga
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: presync
                port:
                  number: 80
